--- a/plugins/watchlearn/movies/updates/version.yaml
+++ b/plugins/watchlearn/movies/updates/version.yaml
@@ -18,3 +18,12 @@
 1.0.7:
     - 'Created table watchlearn_movies_actors'
     - builder_table_create_watchlearn_movies_actors.php
+1.0.8:
+    - 'Created table watchlearn_movies_actors_movies'
+    - builder_table_create_watchlearn_movies_actors_movies.php
+1.0.9:
+    - 'Updated table watchlearn_movies_'
+    - builder_table_update_watchlearn_movies__3.php
+1.0.10:
+    - 'Updated table watchlearn_movies_actors'
+    - builder_table_update_watchlearn_movies_actors.php
